add server dependencies

--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/BrandonDalbec/Schoolwork-Helper#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "express-force-ssl": "^0.3.2",
+    "express-https-redirect": "^1.0.0",
+    "helmet": "^3.10.0",
+    "letsencrypt-express": "^2.0.6",
+    "mongoose": "^5.0.2"
   }
 }
