add functions and fix start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Schoolwork helping website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node server/index --dev",
+    "prod": "node server/index --prod"
   },
   "repository": {
     "type": "git",
