--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-force-ssl": "^0.3.2",
     "express-https-redirect": "^1.0.0",
     "helmet": "^3.10.0",
+    "http2": "^3.3.7",
     "letsencrypt-express": "^2.0.6",
     "mongoose": "^5.0.2"
   }
