fix server bugs and remove copy artifacts

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "homepage": "https://github.com/BrandonDalbec/Schoolwork-Helper#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-force-ssl": "^0.3.2",
     "express-https-redirect": "^1.0.0",
+    "express-rate-limit": "^2.11.0",
     "helmet": "^3.10.0",
     "http2": "^3.3.7",
     "letsencrypt-express": "^2.0.6",
