--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
+    "ejs-helper": "^1.0.3",
     "express": "^4.16.2",
     "express-force-ssl": "^0.3.2",
     "express-https-redirect": "^1.0.0",
