--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node index --dev",
     "prod": "node index --prod",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,8 @@
     "http2": "^3.3.7",
     "letsencrypt-express": "^2.0.6",
     "mongoose": "^5.0.2"
+  },
+  "devDependencies": {
+    "standard": "^10.0.3"
   }
 }
